[gd_scene load_steps=7 format=3 uid="uid://dw4pj7dfhho2e"]

[ext_resource type="Script" path="res://UI/main_menu/MainMenu.gd" id="1_bitjo"]
[ext_resource type="PackedScene" uid="uid://4hsrj6bxicge" path="res://player/Fog.tscn" id="2_ge1xv"]
[ext_resource type="Theme" uid="uid://c4cyyeqpmhipp" path="res://theme.tres" id="2_gn37x"]
[ext_resource type="Theme" uid="uid://tuvxeegbtmjf" path="res://UI/main_menu/main_menu.tres" id="4_qqkpj"]
[ext_resource type="PackedScene" uid="uid://cjwd7ou4lhti3" path="res://UI/controls_screen/controls_screen.tscn" id="5_q8v6b"]
[ext_resource type="AudioStream" uid="uid://c3oqmvieap72g" path="res://assets/Menu_music.mp3" id="6_fkymp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bitjo")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fkymp")
autoplay = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0823529, 0.176471, 1)

[node name="Fog" parent="." instance=ExtResource("2_ge1xv")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -221.0
offset_right = 100.5
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gn37x")
text = "Endelea"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_qqkpj")
theme_override_constants/separation = 50

[node name="Play" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Dream"

[node name="Settings" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
text = "Settings"

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ControlsScreen" parent="CanvasLayer" instance=ExtResource("5_q8v6b")]
visible = false

[node name="Fading" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="FadingTimer" type="Timer" parent="CanvasLayer"]
one_shot = true

[node name="enter" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="exit_control_screen" from="CanvasLayer/ControlsScreen" to="." method="_on_controls_screen_exit_control_screen"]
[connection signal="timeout" from="CanvasLayer/FadingTimer" to="." method="_on_fading_timer_timeout"]
[connection signal="timeout" from="enter" to="." method="_on_enter_timeout"]
